--- a/templates/blog-template.html
+++ b/templates/blog-template.html
@@ -18,6 +18,7 @@
     <div id="navigation-placeholder"></div>
     <div class="container">
         <article class="blog-post">
+            {{LANG_SWITCH}}
             <div class="post-content">
                 {{CONTENT}}
             </div>
