--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -247,6 +247,14 @@ nav ul li a.active {
     background-color: #f0f0f0;
 }
 
+.embedded-page {
+    width: 100%;
+    height: 85vh;
+    max-height: 950px;
+    min-height: 600px;
+    border: 0;
+}
+
 .read-more {
     display: inline-block;
     margin-top: 0.5em;
