--- a/templates/blog-template.html
+++ b/templates/blog-template.html
@@ -10,6 +10,7 @@
     <script src="../src/js/dark-mode.js"></script>
     <script src="../src/js/toc-generator.js"></script>
     <script src="../src/js/progress-bar.js"></script>
+    <script src="../src/js/back-to-top.js"></script>
 </head>
 <body>
     <header>
@@ -35,6 +36,7 @@
     <footer>
         <p>&copy; <script>document.write(new Date().getFullYear())</script> <span data-owner-name>Your Name</span>. All rights reserved.</p>
     </footer>
+    <button type="button" id="back-to-top" class="back-to-top hidden" aria-label="Back to top">Back to top</button>
     <div id="progress-container">
         <div id="reading-progress"></div>
     </div>
