--- a/templates/blog-template.html
+++ b/templates/blog-template.html
@@ -17,19 +17,24 @@
         <h1 data-site-title>My Personal Website</h1>
     </header>
     <div id="navigation-placeholder"></div>
-    <div class="container">
+    <div class="container blog-container">
         <article class="blog-post">
             {{LANG_SWITCH}}
-            <div class="post-content">
-                {{CONTENT}}
-            </div>
-            <div class="post-tags">
-                <h3>Tags:</h3>
-                {{TAGS}}
-            </div>
-            <div class="post-backlinks">
-                <h3>Backlinks:</h3>
-                <ul id="backlinks-list"></ul>
+            <div class="post-layout">
+                <aside id="toc-container" class="toc-container" aria-label="Table of contents"></aside>
+                <div class="post-main">
+                    <div class="post-content">
+                        {{CONTENT}}
+                    </div>
+                    <div class="post-tags">
+                        <h3>Tags:</h3>
+                        {{TAGS}}
+                    </div>
+                    <div class="post-backlinks">
+                        <h3>Backlinks:</h3>
+                        <ul id="backlinks-list"></ul>
+                    </div>
+                </div>
             </div>
         </article>
     </div>
