--- a/templates/blog-template.html
+++ b/templates/blog-template.html
@@ -20,7 +20,7 @@
     <div class="container blog-container">
         <article class="blog-post">
             {{LANG_SWITCH}}
-            <h1 class="post-title">{{TITLE}}</h1>
+            <h1 class="post-title" id="post-title">{{TITLE}}</h1>
             <div class="post-layout">
                 <aside id="toc-container" class="toc-container" aria-label="Table of contents"></aside>
                 <div class="post-main">
