--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,6 +54,14 @@ nav ul li a.active {
 
 .post-title {
     margin-top: 0;
+    line-height: 1.2;
+}
+
+@media (max-width: 899px) {
+    .post-title {
+        font-size: 2.1em;
+        line-height: 1.15;
+    }
 }
 
 /* Blog styles */
